feat: add ListClusterSnapshots proto
